--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
-  "name": "node-server-testing",
-  "version": "1.0.0",
-  "description": "Node Server Testing Challenge",
-  "main": "server.js",
-  "scripts": {
-    "test": "jest --watch"
-  },
-  "jest": {
-    "testEnvironment": "node"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LambdaSchool/node-server-testing.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LambdaSchool/node-server-testing/issues"
-  },
-  "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
-  "devDependencies": {
-    "jest": "^24.9.0",
-    "supertest": "^4.0.2"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+	"name": "node-server-testing",
+	"version": "1.0.0",
+	"description": "Node Server Testing Challenge",
+	"main": "server.js",
+	"scripts": {
+		"server": "nodemon index.js",
+		"start": "node index.js",
+		"test": "cross-env DB_ENV=testing jest --watch"
+	},
+	"jest": {
+		"testEnvironment": "node"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/LambdaSchool/node-server-testing.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/LambdaSchool/node-server-testing/issues"
+	},
+	"homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
+	"devDependencies": {
+		"cross-env": "^7.0.2",
+		"jest": "^24.9.0",
+		"nodemon": "^2.0.4",
+		"supertest": "^4.0.2"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"connect-session-knex": "^1.7.3",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-session": "^1.17.1",
+		"helmet": "^4.0.0",
+		"jsonwebtoken": "^8.5.1",
+		"knex": "^0.21.4",
+		"knex-cleaner": "^1.3.0",
+		"pg": "^8.3.0",
+		"sqlite3": "^5.0.0"
+	}
 }
